--- a/styles.css
+++ b/styles.css
@@ -408,37 +408,36 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 8% 0;
+    padding: 5% 0;
 }
 
-.footer__logo--img {
-    width: 70px;
-    height: 70px;
+.footer__logo {
+    color: #fff;
+    font-size: 36px;
+    font-weight: 100;
+}
+
+.footer__logo:hover {
+    animation: animate-footer-logo 1s ease forwards;
+}
+
+@keyframes animate-footer-logo {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
 }
 
 .footer__social--link,
-.footer__copyright,
-.footer__logo--popper {
+.footer__copyright {
     color: #fff;
-}
-
-.footer__logo--popper {
-    position: absolute;
-    right: 0;
-    top: 30px;
-    font-weight: 700;
-    opacity: 0;
-    transition: all 300ms ease;
 }
 
 .footer__anchor {
     margin-bottom: 20px;
     position: relative;
-}
-
-.footer__anchor:hover .footer__logo--popper {
-    transform: translateX(60px);
-    opacity: 1;
 }
 
 /* Small phones, tablets, large smarphones */
